<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="7dp">

    <TextView
        android:id="@+id/tv_vehicle_id"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/vehicles"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_total_time"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_total_charged"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textStyle="bold"/>

</LinearLayout>